welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
if (hour>=20 || hour<=7)
^